force-app/main/default/objects/TimeTrackingLog__c/TimeTrackingLog__c.object-meta.xml
<CustomObject>
    <label>Time Tracking Log</label>
    <nameField>
        <displayFormat>TTL-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracking Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>