force-app/main/default/objects/TimeTrackingLog__c/fields/Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Collaborator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collaborator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collaborator Time Tracking Logs</relationshipLabel>
    <relationshipName>Collaborator_TimeTrackingLogs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>