force-app/main/default/objects/TimeTrackingLog__c/fields/TotalTime__c.field-meta.xml
<CustomField>
    <fullName>TotalTime__c</fullName>
    <formula>(EndTime__c - StartTime__c) / 3600000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>